[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Menus/ErrorWindow.gd" type="Script" id=1]
[ext_resource path="res://UI/SoundButton.gd" type="Script" id=2]

[node name="ErrorWindow" type="PanelContainer"]
visible = false
margin_left = 635.0
margin_top = 340.0
margin_right = 1285.0
margin_bottom = 740.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 700, 450 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 693.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="VBoxContainer"]
margin_right = 686.0
margin_bottom = 14.0
text = "Error"
align = 1

[node name="Space" type="Control" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 686.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSpacePlaceholder" type="Control" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 686.0
margin_bottom = 343.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/LabelSpacePlaceholder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
text = "An unexpected error occured. Please restart the game and contact the developers!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space2" type="Control" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 686.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 416.0
margin_right = 686.0
margin_bottom = 436.0
text = "Back"
script = ExtResource( 2 )
sound_type = 1
